--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,8 @@ navigationCompose = "2.9.6"
 firebaseAppdistributionGradle = "5.2.0"
 navigationRuntimeKtxVersion = "2.9.6"
 roomCommonJvm = "2.8.4"
-ksp = "2.1.21-2.0.1"
+ksp = "2.0.21-1.0.25"
+hilt = "2.51.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,4 +45,4 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
